<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#158A6D"
    tools:context=".Registrousuario">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/titulo"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.039" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nombre"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black"
            android:ems="10"
            android:hint="@string/nombre_usuario"
            android:inputType="text"
            android:textColor="@color/cyan_600"
            android:textColorHint="@color/cyan_600" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/correo_electronico"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/cyan_600"
            android:textColorHint="@color/cyan_600" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/contrasenia2"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/contrasenia_usuario"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black"
            android:ems="10"
            android:hint="@string/contrasenia"
            android:inputType="textPassword"
            android:textColor="@color/cyan_600"
            android:textColorHint="@color/cyan_600" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/reingresocon"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reingreso_contra"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black"
            android:ems="10"
            android:hint="@string/reingresocon"
            android:inputType="textPassword"
            android:textColor="@color/cyan_600"
            android:textColorHint="@color/cyan_600" />

        <Button
            android:id="@+id/butt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/boton_confirmar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>