<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#158A6D"
    tools:context=".Principal1"
    tools:menu="@menu/menu">

    <!-- Main Content Layout -->

    <!-- Navigation Drawer -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="172dp"
            android:layout_height="169dp"
            android:backgroundTint="#00FFCC"
            android:contentDescription="@string/historial"
            android:onClick="login2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.864"
            app:srcCompat="@drawable/historial" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="172dp"
            android:layout_height="169dp"
            android:backgroundTint="#00FFCC"
            android:contentDescription="@string/historialfav"
            android:onClick="login3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.476"
            app:srcCompat="@drawable/historialfav" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="172dp"
            android:layout_height="169dp"
            android:backgroundTint="#00FFCC"
            android:contentDescription="@string/publicar"
            android:onClick="login1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.933"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.476"
            app:srcCompat="@drawable/publicar" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="172dp"
            android:layout_height="160dp"
            android:background="@color/cyan_600"
            android:contentDescription="@string/registro"
            android:onClick="login4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.933"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.860"
            app:srcCompat="@drawable/libro" />

        <include
            layout="@layout/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/menu"/>  <!-- Añadimos el menú -->

</androidx.drawerlayout.widget.DrawerLayout>